--- a/data_mining/sample.html
+++ b/data_mining/sample.html
@@ -1,5 +1,37 @@
 <html>
     <head>
-
-        
+        <tittle >Sample 1 </tittle>
     </head>
+    <body>
+        <h1>Sample 1</h1>
+        <div class="section">
+            <p>hello
+                world</p>
+            <p>this is my first
+                 html file.</p>
+            <p>it follows tree 
+                structure</p> 
+        </div>
+        <div>
+            <ul>
+                <li><a href="#">One</a></li>
+                <li><a href="#">Two</a></li>
+                <li><a href="#">Three></a></li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li><a href="#">Apple</a></li>
+                <li><a href="#">Banana</a></li>
+                <li><a href="#">Cherry</a></li>
+            </ul>
+        </div>
+       <div>
+            <ul>
+                <li><a href="#">Lemon</a></li>
+                <li><a href="#">Ginger</a></li>
+                <li><a href="#">Garlic</a></li>
+            </ul>
+        </div>
+    </body>
+</html>    
